// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex In-Meeting All Media 1`] = `
Array [
  <div
    className="wxc-in-meeting wxc-in-meeting--remote-sharing"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting wxc-remote-media--remote-video-n-share"
      >
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-video"
          muted={true}
          playsInline={true}
        />
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-share"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting wxc-local-media--no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="wxc-avatar__content"
          >
            <svg
              className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className="wxc-avatar__image"
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Audio Only 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting"
      >
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting wxc-local-media--no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="wxc-avatar__content"
          >
            <svg
              className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className="wxc-avatar__image"
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Connecting 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting"
      >
        <div
          className="wxc-badge wxc-remote-media__connecting-badge"
          style={Object {}}
        >
          <div
            className="wxc-spinner wxc-remote-media__connecting-spinner"
            style={
              Object {
                "height": 14,
                "width": 14,
              }
            }
          />
          <span>
            Connecting
          </span>
        </div>
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting wxc-local-media--no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="wxc-avatar__content"
          >
            <svg
              className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className="wxc-avatar__image"
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Local Share 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting"
      >
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-video"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting"
      >
        <video
          autoPlay={true}
          className="wxc-local-media__video"
          playsInline={true}
        />
      </div>
      <div
        className="wxc-banner wxc-in-meeting__share-banner wxc-banner--top"
      >
        You're sharing your screen
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Remote Share 1`] = `
Array [
  <div
    className="wxc-in-meeting wxc-in-meeting--remote-sharing"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting wxc-remote-media--remote-video-n-share"
      >
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-video"
          muted={true}
          playsInline={true}
        />
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-share"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting wxc-local-media--no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="wxc-avatar__content"
          >
            <svg
              className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className="wxc-avatar__image"
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Video Only 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-in-meeting__media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media wxc-in-meeting__remote-media-in-meeting"
      >
        <video
          autoPlay={true}
          className="wxc-remote-media__video wxc-remote-media__remote-video"
          muted={true}
          playsInline={true}
        />
      </div>
      <div
        className="wxc-local-media wxc-in-meeting__local-media-in-meeting wxc-local-media--no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="wxc-avatar__content"
          >
            <svg
              className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className="wxc-avatar__image"
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
